--- a/index.html
+++ b/index.html
@@ -7,69 +7,86 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./dom.css"/>
 </head>
-<body>
+<body onload="edd()">
+  <div class="container">
     <form class="container my-3">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="firtName">First Name<sup>*</sup></label>
-            <input type="text" class="form-control w-75" id="firtName" placeholder="First Name">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="lastName">Last Name<sup>*</sup></label>
-            <input type="text" class="form-control w-75" id="lastName" placeholder="Last Name">
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="firtName">First Name<sup>*</sup></label>
+          <input type="text" class="form-control w-75" id="firtName" placeholder="First Name">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="lastName">Last Name<sup>*</sup></label>
+          <input type="text" class="form-control w-75" id="lastName" placeholder="Last Name">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-8 m-md-0">
+          <label for="inputAddress">Address<sup>*</sup></label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="No.1 Guvi St">
+        </div>
+        <div class="form-group col-md-4 m-md-0">
+          <div class="form-group p-0 m-0">
+              <p class="mb-2"><b>Gender</b><sup>*</sup></p>
+              <div class="form-group pt-1 border form-control m-0">
+                  <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Male">
+                      <label class="form-check-label" for="inlineRadio1">Male</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Female">
+                      <label class="form-check-label" for="inlineRadio2">Female</label>
+                  </div>
+              </div>
           </div>
         </div>
-        <div class="form-row">
-          <div class="form-group col-md-8 m-md-0">
-            <label for="inputAddress">Address 1<sup>*</sup></label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="No.1 Guvi St">
-          </div>
-          <div class="form-group col-md-4 m-md-0">
-            <div class="form-group p-0 m-0">
-                <label for="Gender">Gender<sup>*</sup></label>
-                <div class="form-group pt-1 border form-control m-0">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                        <label class="form-check-label" for="inlineRadio1">Male</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                        <label class="form-check-label" for="inlineRadio2">Female</label>
-                    </div>
-                </div>
-            </div>
-          </div>
+      </div>
+      <div class="form-group my-md-3">
+          <label for="choiceOfFood">Choose Atleast 2 Food Items<sup>*</sup></label>
+          <select multiple class="form-control" id="choiceOfFood">
+            <option>Dosai</option>
+            <option>Idly</option>
+            <option>Poori</option>
+            <option>Briyani</option>
+            <option>Pongal</option>
+          </select>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          <label for="inputCountry">Country<sup>*</sup></label>
+          <input type="text" class="form-control" id="inputCountry">
         </div>
-        <div class="form-group mt-md-3">
-          <label for="inputAddress2">Address 2</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+        <div class="form-group col-md-4">
+          <label for="inputState">State<sup>*</sup></label>
+          <input type="text" class="form-control" id="inputState">
         </div>
-        <div class="form-group">
-            <label for="choiceOfFood">Choose Atleast 2 Food Items<sup>*</sup></label>
-            <select multiple class="form-control" id="choiceOfFood">
-              <option>Dosai</option>
-              <option>Idly</option>
-              <option>Poori</option>
-              <option>Briyani</option>
-              <option>Pongal</option>
-            </select>
+        <div class="form-group col-md-4">
+          <label for="inputpinCode">Pin Code<sup>*</sup></label>
+          <input type="number" class="form-control" id="inputpinCode">
         </div>
-        <div class="form-row">
-          <div class="form-group col-md-4">
-            <label for="inputCountry">City<sup>*</sup></label>
-            <input type="text" class="form-control" id="inputCountry">
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputState">State<sup>*</sup></label>
-            <input type="text" class="form-control" id="inputState">
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputpinCode">Pin Code<sup>*</sup></label>
-            <input type="number" class="form-control" id="inputpinCode">
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </div>
+      <button type="button" name="submit" id="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <table class="table container my-3" id="table">
+      <h4 class="my-3 text-center"><b>Table</b></h4>
+      <thead>
+        <tr class="row">
+          <th scope="col" class="col-md-2 text-center">First Name</th>
+          <th scope="col" class="col-md-2 text-center">Last Name</th>
+          <th scope="col" class="col-md-2 text-center">Address</th>
+          <th scope="col" class="col-md-1 text-center">Gender</th>
+          <th scope="col" class="col-md-2 text-center">Food of Choice</th>
+          <th scope="col" class="col-md-1 text-center">Country</th>
+          <th scope="col" class="col-md-1 text-center">State</th>
+          <th scope="col" class="col-md-1 text-center">Pin Code</th>
+        </tr>
+      </thead>
+      <tbody id="tbody"></tbody>
+  </table>
+  </div>
     <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
